--- a/Hippo/UIView/TableViewCell/PaymentItemDescriptionCell/PaymentItemDescriptionCell.xib
+++ b/Hippo/UIView/TableViewCell/PaymentItemDescriptionCell/PaymentItemDescriptionCell.xib
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PaymentItemDescriptionCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="352" height="227"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="273" id="KGk-i7-Jjw" customClass="PaymentItemDescriptionCell" customModule="HippoAgent" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="352" height="273"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="352" height="226.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="352" height="273"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UYL-S0-bYB">
-                        <rect key="frame" x="10" y="10" width="332" height="161.5"/>
+                        <rect key="frame" x="10" y="10" width="332" height="230.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="wIb-Pu-XIr">
-                                <rect key="frame" x="8" y="8" width="316" height="145.5"/>
+                                <rect key="frame" x="8" y="8" width="316" height="214.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPz-wR-fGL">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="weY-Ap-vVT">
                                         <rect key="frame" x="0.0" y="0.0" width="316" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="3jz-uo-hY1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="le8-Fm-igV">
+                                        <rect key="frame" x="0.0" y="21" width="316" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="jRA-WO-fgH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPz-wR-fGL">
+                                        <rect key="frame" x="0.0" y="69" width="316" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18" id="kY4-7S-WsV"/>
                                         </constraints>
@@ -35,7 +50,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="wWL-8S-dEx">
-                                        <rect key="frame" x="0.0" y="21" width="316" height="55.5"/>
+                                        <rect key="frame" x="0.0" y="90" width="316" height="55.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dY7-KU-42w">
                                                 <rect key="frame" x="0.0" y="0.0" width="316" height="51.5"/>
@@ -81,7 +96,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w4e-2j-MKW">
-                                        <rect key="frame" x="0.0" y="79.5" width="316" height="18"/>
+                                        <rect key="frame" x="0.0" y="148.5" width="316" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18" id="tXR-tf-lQF"/>
                                         </constraints>
@@ -89,12 +104,11 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="le8-Fm-igV">
-                                        <rect key="frame" x="0.0" y="100.5" width="316" height="45"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k7n-fG-NKt">
+                                        <rect key="frame" x="0.0" y="169.5" width="316" height="45"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="45" id="jRA-WO-fgH"/>
+                                            <constraint firstAttribute="height" constant="45" id="Jcw-Ky-W80"/>
                                         </constraints>
-                                        <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -115,7 +129,7 @@
                             <constraint firstAttribute="width" constant="30" id="DfX-ec-P6D"/>
                             <constraint firstAttribute="height" constant="30" id="HAN-2l-MHn"/>
                         </constraints>
-                        <state key="normal" image="cancel_icon"/>
+                        <state key="normal" image="cancel_btn_navigation_bar"/>
                         <connections>
                             <action selector="cancelButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0fB-Cj-and"/>
                         </connections>
@@ -137,15 +151,17 @@
                 <outlet property="descriptionLabel" destination="pPz-wR-fGL" id="hos-Io-LiE"/>
                 <outlet property="descriptionTextView" destination="FoH-oC-Dnx" id="RMO-2c-vpm"/>
                 <outlet property="priceLabel" destination="w4e-2j-MKW" id="FA1-ip-y9T"/>
-                <outlet property="priceTextField" destination="le8-Fm-igV" id="Zzb-5v-vlA"/>
+                <outlet property="priceTextField" destination="k7n-fG-NKt" id="vWg-a0-wMw"/>
                 <outlet property="textViewBottomLineView" destination="QOI-5m-Bye" id="Soq-6f-7YJ"/>
                 <outlet property="textviewHeightConstraint" destination="gSz-kT-8cc" id="dm0-ca-ykK"/>
                 <outlet property="textviewPlaceHolderLabel" destination="ZlA-Ju-UUM" id="q5U-x2-PsX"/>
+                <outlet property="titleLabel" destination="weY-Ap-vVT" id="bJB-Ij-Uw3"/>
+                <outlet property="titleTextField" destination="le8-Fm-igV" id="uZh-WK-CUg"/>
             </connections>
-            <point key="canvasLocation" x="114" y="110"/>
+            <point key="canvasLocation" x="113.59999999999999" y="129.98500749625188"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="cancel_icon" width="16" height="16"/>
+        <image name="cancel_btn_navigation_bar" width="14" height="14"/>
     </resources>
 </document>
